--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<dependency>
 	<groupId>org.apache.xmlgraphics</groupId>
       <artifactId>batik-svg-dom</artifactId>
-      <version>1.8</version>
+      <version>1.7</version>
 	</dependency>
 	<dependency>
 	<groupId>org.apache.xmlgraphics</groupId>
@@ -43,6 +43,66 @@
       <version>1.8</version>
 	</dependency>
 	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-anim</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-css</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-gvt</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-parser</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-awt-util</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-bridge</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-ext</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-script</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>
+	<groupId>org.apache.xmlgraphics</groupId>
+      <artifactId>batik-xml</artifactId>
+      <version>1.8</version>
+	</dependency>
+	<dependency>	
+	<groupId>xml-apis</groupId>
+      <artifactId>xml-apis-ext</artifactId>
+      <version>1.3.04</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.xmlgraphics</groupId>
+	    <artifactId>batik-transcoder</artifactId>
+	    <version>1.8</version>
+	</dependency>
+	<dependency>
+	    <groupId>commons-lang</groupId>
+	    <artifactId>commons-lang</artifactId>
+	    <version>2.3</version>
+	</dependency>
+	<dependency>	
 	<groupId>org.apache.xmlgraphics</groupId>
       <artifactId>xmlgraphics-commons</artifactId>
       <version>1.5</version>
