--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
 	<groupId>CodeToPic</groupId>
 	<artifactId>CodeToPic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+	    <maven.compiler.source>1.7</maven.compiler.source>
+	    <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -17,6 +23,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
